--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,57 @@
+:root {
+  --main-color: #24a7f3;
+  --white-color: #fffbfe;
+  --background-color: #000411;
+}
+
+h1,
+h2 {
+  margin: 0;
+  font-size: 48px;
+  line-height: 67px;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-weight: 800;
+  margin-top: 70px;
+}
+
+h2 {
+  font-weight: 400;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  color: var(--white-color);
+  background-color: var(--main-color);
+  margin: 0.4rem;
+}
+button::hover {
+  background-color: var(--white-color);
+}
+
+input {
+  width: 50%;
+  margin: 0.4rem 0;
+  background: var(--white-color);
+  border: 0.5px solid #e1e1e1;
+  box-sizing: border-box;
+  box-shadow: inset 0px 4px 6px rgba(0, 0, 0, 0.05);
+  height: 2.5rem;
+  color: var(--main-color);
+}
+
 .App {
   text-align: center;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  margin: 0;
+  padding: 0;
+  background: var(--background-secondary);
 }
 
 .App-logo {
@@ -14,18 +66,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  color: var(--white-color);
 }
 
 @keyframes App-logo-spin {
